--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,22 +1,31 @@
-FROM node:20 as build
+# Stage 1: Build the React app
+FROM node:22-alpine AS builder
 
 WORKDIR /app
 
+# Install dependencies
 COPY package*.json ./
-
 RUN npm install
 
+# Copy source code
 COPY . .
 
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+
+# Build the app
 RUN npm run build
 
-# Production stage using Nginx to serve frontend files
+# Stage 2: Serve with Nginx
 FROM nginx:alpine
 
-COPY --from=build /app/dist /usr/share/nginx/html
+# Copy built files from builder stage to nginx public folder
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 8080
+# Expose port 80
+EXPOSE 80
 
+# Start Nginx server
 CMD ["nginx", "-g", "daemon off;"]
