--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.18.0",
+    "nodemailer": "^8.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.9",
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
