--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,13 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
     "framer-motion": "^12.29.0",
+    "i18next": "^25.8.7",
+    "i18next-browser-languagedetector": "^8.2.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.5.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "socket.io-client": "^4.8.1",
